# Reflect_Audio_Journaling

./: .gitignore  ANALYSIS.md  CHANGES.md  CHANGE_IMPACT_RULE.md  DO_NOT_TOUCH.md  ENFORCEMENT_MAP.md  HUMAN_PROCESS.md  INVARIANTS.md  PROGRESS-2026-06-12.md  RAG_Evaluation_Report.docx  README.md  RUNTIME_GUARDS.md  TEST_STRATEGY.md  readme.md  setup.bat  setup.md  setup.ps1  setup.sh  setup_project.py  start.ps1  start.sh  start_engine.bat  start_engine.command  start_engine.ps1  start_engine.sh
.claude/: settings.local.json
Appendix/: HCD Brief.md  RAG_Evaluation_Report.md  README.md
Backend/: .gitignore  README.md  Requirements.txt  TESTING_FLOW.md  build_prompt.py  dictionary_question_prompt.py  environment.yml  install_models.py  main.py  pyproject.toml  question_prompt.py  reamd_me_iman.md  requirements.txt  segment_prompt.py  simpler_dictionary_question_prompt.py  start_backend.py  uploaded_journal.txt
Backend/app/: config.py  db.py  dev.py  dictionary_question_prompt.py  logging_config.py  main.py  schemas.py  topic_prompt.py
Backend/app/analysis/: speech.py
Backend/app/api/: deps.py  routes.py  schemas.py
Backend/app/core/: config.py  deps.py  system_check.py
Backend/app/domain/: models.py
Backend/app/pipelines/: processing.py
Backend/app/prompts/: dictionary_question_prompt.py  gibbs_facilitator_prompt.py  question_prompt.py  reflection_ask_prompt.py  reflection_update_prompt.py  segment_prompt.py  simpler_dictionary_question_prompt.py  summary_prompt.py  tag_extraction_prompt.py  topic_grouping_prompt.py
Backend/app/repositories/: chatRepository.py  journalRepo.py  journalRepository.py  reflectionStateRepository.py  sourceRepository.py  tagRepository.py
Backend/app/routes/: chat.py  journal.py  query.py  settings.py  source.py  tags.py
Backend/app/schemas/: journalSchemas.py  tagSchemas.py
Backend/app/services/: chatService.py  chroma.py  chunking.py  file_watcher.py  generation.py  generation_registry.py  journalService.py  llm_runtime.py  ollama_gate.py  pii.py  prompt.py  prosody.py  rag.py  ranking.py  recordings.py  reflectionLoop.py  reflectionService.py  reflectionStateService.py  reflection_guard.py  reranker.py  retrieval.py  safety.py  seed.py  segmentation.py  semanticSearch.py  settings.py  settings_service.py  sourceService.py  storage.py  summaryService.py  tagService.py  temporal.py  thin_turn.py  transcription.py  units.py
Backend/app/services/storage/: __init__.py  audio.py
Backend/app/utils/: filename_dates.py  html_text.py  markdown_html.py  strip_thinking.py  unique_path.py
Backend/configs/: frontend_settings.json  pii_patterns.json
Backend/data/: settings.json
Backend/data/metadata/: 05e9858a89cf.json  1aaed640333d.json  2603eed09692.json  7c54326255bf.json  977cbb5f3c61.json  9d3d7f1ea431.json  a54197fe7b10.json  ac0120e49eaf.json  c1453cfb57f3.json  ecdf6150e32a.json  fedc88e06f10.json
Backend/data/segments/05e9858a89cf/2025/11/17/: 20251117_140025_05e9858a89cf.json
Backend/data/segments/9d3d7f1ea431/2025/11/17/: 20251117_142615_9d3d7f1ea431.json
Backend/data/segments/a54197fe7b10/2025/11/17/: 20251117_143140_a54197fe7b10.json
Backend/data/transcripts/05e9858a89cf/2025/11/17/: 20251117_140025_05e9858a89cf.txt
Backend/data/transcripts/36d3d5dcf899/2025/11/17/: 20251117_104026_c53e2daa509f.txt  20251117_104113_2395748ed095.txt
Backend/data/transcripts/d4205cafe847/2025/11/17/: 20251117_100649_a7211643d15e.txt  20251117_103447_f935ad9e713d.txt  20251117_103809_a1cdb88523e8.txt
Backend/database/: models.py
Backend/database/chroma/: chroma.sqlite3
Backend/database/uploads/audio/: 2b7af7a0-f830-4c1d-b9d0-1f10f108177e.m4a  5f3b73d9-a0b1-410d-8dd2-92646c2cbf53.m4a
Backend/database/uploads/text/: bb54fa01-6642-4eff-9509-b4f36a093ab8.md
Backend/migrations/: env.py
Backend/migrations/versions/: 16b8c20524e6_deleting_test_field_in_journalentry_.py  1f71e699b478_from_journal_to_source.py  2422bed80cc9_changed_created_at_for_journal_entry.py  30c3e3b5293a_initial.py  34a06fa3ac33_added_transcript_segments_to_source.py  39783686c193_testing_alembic_with_test_field_in_.py  43a1a25a9495_journal_text_made_nullable_for_non_.py  47ff3ce9ad69_initial_schema.py  702551264b82_add_chat_and_chat_message.py  7bb8a711c1a6_added_filepath_to_journal.py  9b959c7aec0d_reset_for_scale_questions.py  a1b2c3d4e5f6_add_summary_html_to_source.py  a3d9e2c1b4f7_add_reflection_scope_to_chat.py  a3f1d2c4e5b6_add_model_to_chat_message.py  b4e2d3c5f6a7_add_thinking_to_chat_message.py  b6d4e5f7a9c1_add_provenance_and_verified_to_source.py  b9770477adc9_updated_journal_for_saving_origional_.py  c1f4f1a2b3c4_trigger_based_questions.py  c5f3e4d6a7b8_add_text_html_to_source.py  c7e5f9a1b3d2_add_reflection_state.py  c9d8e7f6a5b4_add_origin_source_id_to_source.py  d6a4f5b7c8e9_add_gibbs_step_to_chat_message.py  d8f2a4c6b1e3_add_units_to_source.py  e36510b9f747_init.py  e7b5a6c9d0f1_add_sources_to_chat_message.py  f8c6b7d0e1a2_add_reflection_goal_to_chat.py  f8c6d7e9a0b2_structured_ingestion.py
Backend/scripts/: backfill_source_units.py  run_reflection_turn.py
Backend/tests/: README.md  test_pyproject_torch_sources.py
Backend/tests/pipelines/: test_processing.py
Backend/tests/prompts/: test_reflection_prompt_assembly.py
Backend/tests/repositories/: conftest.py  test_migration_drift.py  test_reflection_state.py  test_source_provenance.py  test_tag_provenance.py
Backend/tests/services/: test_generation_registry.py  test_journalService.py  test_rag_retrieval.py  test_ranking.py  test_reflection_guard.py  test_reflection_loop.py  test_reranker.py  test_safety.py  test_segmentation.py  test_semantic_search.py  test_settings.py  test_settings_service.py  test_temporal.py  test_thin_turn.py  test_transcription.py  test_unit_retrieval.py  test_units.py
Backend/tests/utils/: test_filename_dates.py  test_strip_thinking.py  test_unique_path.py
Frontend/: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
RAG-solution/: README.md
Research/: README.md
docs/: HANDOVER.md  (+11 more)
(+603 files in other folders)
