[project]
name = "reflect-backend"
version = "0.1.0"
requires-python = "==3.11.*"
dependencies = [
    # Core ML / audio
    "numpy==1.26.4",
    "torch==2.5.1",
    "torchaudio==2.5.1",
    "scikit-learn==1.7.2",
    "librosa==0.11.0",
    "transformers==4.47.1",
    "whisperx==3.3.1",
    "sentence-transformers==5.1.2",
    # NLP
    "spacy==3.8.4",
    "nl-core-news-lg @ https://github.com/explosion/spacy-models/releases/download/nl_core_news_lg-3.8.0/nl_core_news_lg-3.8.0-py3-none-any.whl",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    # LLM / RAG
    "ollama==0.6.1",
    "llama-index==0.14.18",
    "llama-index-llms-ollama==0.10.0",
    "llama-index-embeddings-ollama==0.9.0",
    "llama-index-vector-stores-chroma==0.5.5",
    # Web
    "fastapi==0.135.1",
    "uvicorn[standard]==0.42.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "python-multipart==0.0.9",
    "httpx==0.27.2",
    # Database
    "sqlmodel==0.0.37",
    "alembic==1.18.4",
    # Vector DB
    "chromadb==1.5.5",
    # Misc
    "python-dotenv==1.1.1",
    "qrcode[pil]==8.2",
    "ragas==0.4.3",
    "rapidfuzz==3.14.5",
    "strip-markdown==1.3",
    "imageio-ffmpeg==0.6.0",
    "setuptools==80.10.2",
    "watchdog>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-mock==3.15.1",
    "pytest-asyncio==0.25.2",
]

[tool.uv]
package = false

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# On Linux use the lightweight CPU-only index; on Windows fall back to PyPI
# (the PyTorch CPU index has no win_amd64 wheels for the +cpu variant).
# If you have a CUDA GPU, replace the url below with the matching cu* index,
# e.g. https://download.pytorch.org/whl/cu124
[tool.uv.sources]
torch = [
  { index = "pytorch", marker = "sys_platform == 'linux'" },
]
torchaudio = [
  { index = "pytorch", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
